--- a/README
+++ b/README
@@ -1,19 +1,17 @@
 The opensource version of baidu-rpc
 # BUILD
 ### Ubuntu/LinuxMint/WSL
-**install deps**  
-Common: sudo apt-get install git g++ make  
-gflags: sudo apt-get install libgflags-dev  
-protobuf: sudo apt-get install libprotobuf-dev libprotoc-dev protobuf-compiler  
-leveldb(used by rpcz): sudo apt-get install libleveldb-dev libsnappy-dev  
-openssl(for https): libssl-dev  
+**install common deps**  
+Including: git g++ make libssl-dev
+**install gflags protobuf leveldb**
+Including: libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev  
+If you need to statically link leveldb, install libsnappy-dev as well.
 **compile**  
 git clone this repo. cd into the repo and run: sh config_brpc.sh --headers=/usr/include --libs=/usr/lib  
-**run echo example**  
+**run example**  
 cd into example/echo_c++, make, run echo_server and echo_client  
 **run examples with cpu/heap profilers**  
-sudo apt-get install libgoogle-perftools-dev libunwind-dev liblzma-dev  
-Rerun config_brpc.sh  
+Install libgoogle-perftools-dev and re-run config_brpc.sh before compiling
 **compile tests**  
 Install gmock and gtest, use the gtest embedded in gmock and don't install libgtest-dev  
 sudo apt-get install google-mock; cd /usr/src; sudo cmake .; sudo make; sudo mv lib*.a gtest/lib*.a /usr/lib; sudo mv gtest/include/gtest /usr/include/  
@@ -30,6 +28,7 @@ Rerun config_brpc.sh
 
 # Supported deps:
 GCC: 4.8-7.1  
+Clang: 3.5-4.0
 glibc: 2.12-2.25  
 protobuf: 2.4-3.2  
 gflags: 2.0-2.21  
