Emphasize static linking
Change-Id: I0d7ba6adad5411bb4158c1ea83b96ce1c210a925

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 The opensource version of baidu-rpc
 # BUILD
+baidu-rpc prefers static linking if possible, so that deps don't have to be installed on every machine running the code.  
 ### Ubuntu/LinuxMint/WSL
 **install common deps**  
 Including: git g++ make libssl-dev  
