--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 A RPC framework used throughout Baidu, with more than 600,000 instances.
 
-Check out [Getting started](docs/getting_started.md) for more information.
+Check out [Getting started](docs/cn/getting_started.md) for more information.
